--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,16 +1,143 @@
-h3 Home
-- @users.each do |user|
-  p
-    | User: #{link_to user.name, user}
-    | #{user.email}
+div.container
+  /! 文案说明
+  div.row
+    div.large-12
+      h2.text-center 马上开始投资
+    div.large-12
+      h4.text-right 迅速找到你感兴趣的优秀项目，开始你的投资第一步
+    /! 图文说明
+    /! TODO: 完成一个切换的动画
+    ul.sub-nav
+      li.active style=" width: 100% "
+        div.large-12
+          img src="/assets/project_example.png" width="100%"
+      /!
+        li
+          div.large-12
+            img src="/assets/project_example.png"
+        li
+          div.large-12
+            img src="/assets/project_example.png"
+    /! 投资项目列前三甲
+    div.row
+      div.large-4 class="columns"
+        img src="/assets/project_list_1.png"
+      div.large-4 class="columns"
+        img src="/assets/project_list_3.png"
+      div.large-4 class="columns"
+        img src="/assets/project_list_2.png"
+    /! 查看所有投资项目
+    div.row
+      a href="#"
+        p.text-center 查看所有投资项目
+  div.row
+    hr
+  /! 关于投资项目结束
+  /! 关于创业者
+  div.row
+    div.large-12
+      h2.text-center 马上参与创业
+    div.large-12
+      h4.text-right 赶快找合适你的创业小伙伴吧
+    /! 创业项目招人
+    div.row
+      div.large-4 class="columns"
+        img src="/assets/job1.png"
+      div.large-4 class="columns"
+        img src="/assets/job2.png"
+      div.large-4 class="columns"
+        img src="/assets/job3.png"
+    /! 查看所有职位
+    div.row
+      a href="#"
+        p.text-center 查看所有职位
+  div.row
+    hr
+  /! 关于创业参与者结束
 
-- if user_signed_in?
-  - if @weibo_user
-    h3 关注:
-    = @weibo_user['followers_count']
-    h3 粉丝:
-    = @weibo_user['friends_count'] 
-    h3 微薄:
-    = @weibo_user['statuses_count']
-    h3 收藏:
-    = @weibo_user['favourites_count']
+  /! 关于参与投资人
+  div.row
+    div.large-12
+      h2.text-center 马上找到你的领投人
+    div.large-12
+      h4.text-right 让最专业的投资人带你挑选最好的项目
+    /! 列出最专业的投资人三个
+    div.row
+      div.large-4 class="columns"
+        img src="/assets/investor1.png"
+      div.large-4 class="columns"
+        img src="/assets/investor2.png"
+      div.large-4 class="columns"
+        img src="/assets/investor3.png"
+    /! 正在领投
+    h3 他正在领投
+    div.row
+      div.large-4 class="columns"
+        img src="/assets/project_list_1.png"
+      div.large-4 class="columns"
+        img src="/assets/project_list_3.png"
+      div.large-4 class="columns"
+        img src="/assets/project_list_2.png"
+    /! 查看所有领投人
+    div.row
+      a href="#"
+        p.text-center 查看所有领投人
+  div.row
+    hr
+  /! 关于投资参与者结束
+
+  /! 关于基金
+  div.row
+    div.large-12
+      h2.text-center 马上发起基金
+    div.large-12
+      h4.text-right 告诉大家，拥有优秀声誉的你正在发起基金
+    /! 列出四个最好的基金
+    div.row
+      div.large-3 class="columns"
+        img src="/assets/fund1.png"
+      div.large-3 class="columns"
+        img src="/assets/fund1.png"
+      div.large-3 class="columns"
+        img src="/assets/fund1.png"
+      div.large-3 class="columns"
+        img src="/assets/fund1.png"
+    /! 查看所有基金
+    div.row
+      a href="#"
+        p.text-center 查看所有正在发起的基金
+  div.row
+    hr
+  /! 关于基金结束
+
+  /! 准备上线项目
+  div.row
+    div.large-12
+      h2.text-center 准备上线项目
+    div.large-12
+      h4.text-right 让大家提前认识你吧
+    /! 列出八个上线项目
+    ul.large-block-grid-4
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+      li
+        img src="/assets/project_example.png"
+    /! 查看所有上线项目
+    div.row
+      a href="#"
+        p.text-center 查看所有正在预热的项目
+  div.row
+    hr
+  /! 关于预热项目结束
