--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -2,8 +2,19 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
   ul.title-area
     li.name
       h1 
-        a href='/' EachFund
+        a href='/' 创业赢 CYwin
   div.top-bar-section
+    ul.left
+      li
+        a href="#" 发起项目
+      li
+        a href="#" 联合投资
+      li
+        a href="#" 参与项目
+      li
+        a href="#" 动态
+      li
+        a href="#" 赢基金
     ul.right
       li.has-form
         form
