add project new

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -6,7 +6,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
   div.top-bar-section
     ul.left
       li
-        a href="#" 发起项目
+        = link_to "发起项目", new_project_path
       li
         a href="#" 联合投资
       li
