add project new and show

--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -1,1 +1,10 @@
-h1 hello
+div.row
+  div.large-4
+    = simple_form_for @project do |f|
+      = f.input :name
+      = f.input :oneword
+      = f.input :description
+      = f.input :stage
+      = f.input :where1
+      = f.input :where2
+      = f.button :submit
