--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -10,7 +10,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
       li
         a href="#" 联合投资
       li
-        a href="#" 参与项目
+        = link_to "参与项目", projects_path
       li
         a href="#" 动态
       li
