add project create stage1 stage2

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,9 @@
  *
  *= require_self
  //= require foundation_and_overrides
-
  *= require_tree .
  */
-/*= require foundation */
 
+div.project {
+  background: white;
+}
