--- a/app/views/projects/stage1.html.slim
+++ b/app/views/projects/stage1.html.slim
@@ -1,7 +1,7 @@
 div.row.project
   = render "header"
-  h1 基本信息
-  = simple_form_for @project do |f|
+  h1 团队信息
+  = simple_form_for @project, url: stage1_project_url(@project.id), method: 'post' do |f|
     = f.input :name
     = f.input :oneword
     = f.input :description
