add logo upload

--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -2,6 +2,7 @@ div.row.project
   = render "header"
   h1 基本信息
   = simple_form_for @project do |f|
+    = f.input :logo
     = f.input :name
     = f.input :oneword
     = f.input :description
