add projects show page

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.search_side {
+  background-color: #fafafa;
+}
+
+.project_show {
+  padding: 1rem 0 1rem 0;
+  border-bottom: 1px solid #dddddd;
+}
