--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,4 +1,19 @@
-div.row
-  - @projects.each do |project|
-    div.large_4
-      p = project.name
+div.row.project
+  div.large-4.columns.search_side
+    = render "search"
+    = render "selection"
+    
+  div.large-8.columns  
+    - @projects.each do |project|
+      div.row.project_show
+        div.large-2.columns
+          = image_tag(project.logo_url, size: "200x200")
+        div.large-10.columns
+          = link_to project.name, project
+          div.row
+            div.large-7.columns
+              p #{project.description}
+            div.large-5.columns
+              div.progress
+                span.meter style="width: 50%" 
+        
