--- a/app/views/projects/stage2.html.slim
+++ b/app/views/projects/stage2.html.slim
@@ -1,5 +1,5 @@
 div.row.project
-  = render "header"
+  = render partial: "header", locals: { stage: :stage2 }
   h1 招聘信息
   = simple_form_for @project, url: stage2_project_url(@project.id), method: 'post' do |f|
     = f.input :name
