补充关于页面, 增加地区选择, 汉化

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,15 @@ div.project {
   background: white;
 }
 
+div.container {
+  padding-top: 2rem;
+}
+
 div.footer {
   padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.logo {
+  font-size: 1.1rem;
 }
