--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -7,6 +7,9 @@ div.row.project
     = f.input :oneword
     = f.input :description
     = f.input :stage
-    = f.input :where1
-    = f.input :where2
+    = f.input :where1 do
+      .city-group
+        = f.select :where1, ChinaCity.list, {}, { class: 'city-select large-4 columns' }
+        = f.select :where2, ['--城市--'], {}, class: 'city-select large-4 columns'
+        = f.select :where3, ['--地区--'], {}, class: 'city-select large-4 columns'
     = f.button :submit, "Next"
