--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -4,16 +4,4 @@ div.row.project
     = render partial: "selection", locals: { projects: @projects }
     
   div.large-8.columns.projects_search  
-    - @projects.each do |project|
-      div.row.project_show
-        div.large-2.columns
-          = image_tag(project.logo_url, size: "200x200")
-        div.large-10.columns
-          = link_to project.name, project
-          div.row
-            div.large-7.columns
-              p #{project.description}
-            div.large-5.columns
-              div.progress
-                span.meter style="width: 50%" 
-        
+    = render partial: "index", locals: { projects: @projects }
