--- a/app/views/projects_searcher/index.html.slim
+++ b/app/views/projects_searcher/index.html.slim
@@ -1,15 +1,4 @@
 - if @projects.empty?
   h4 No Content
 - else
-  - @projects.each do |project|
-    div.row.project_show
-      div.large-2.columns
-        = image_tag(project.logo_url, size: "200x200")
-      div.large-10.columns
-        = link_to project.name, project
-        div.row
-          div.large-7.columns
-            p #{project.description}
-          div.large-5.columns
-            div.progress
-              span.meter style="width: 50%" 
+  = render partial: "projects/index", locals: { projects: @projects }
