test full about project

--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -10,7 +10,7 @@ div.row.project
       div.row
         div.large-7.columns
           p 
-            = @project.where1 + " * " + @project.where2
+            = project_address(@project)
   hr 
   div.row
     div.large-12.columns
