--- a/app/views/projects/_contact.html.slim
+++ b/app/views/projects/_contact.html.slim
@@ -1,7 +1,7 @@
 div.row
   div.large-12.columns
     h4 项目联系方式
-    = f.simple_fields_for :contact_attributes do |p|
+    = f.simple_fields_for :contact_attributes, project.contact do |p|
       = p.input :address
       = p.input :phone
       = p.input :qq
