--- a/app/views/projects/_index.html.slim
+++ b/app/views/projects/_index.html.slim
@@ -7,6 +7,7 @@
       div.row
         div.large-7.columns
           p #{project.description}
+          p.address #{project_address(project)}
         div.large-5.columns
           div.progress
             span.meter style="width: 50%" 
