--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -6,12 +6,13 @@ div.row.project
     = f.input :name
     = f.input :oneword
     = f.input :description
-    = f.input :stage
+    = f.input :stage do
+      = f.select :stage, ['--请选择--'] + Project::STAGES
     = f.input :where1 do
       .city-group
         = f.select :where1, ['--省份--'] + ChinaCity.list, {}, { class: 'city-select large-4 columns' }
         = f.select :where2, ['--城市--'], {}, class: 'city-select large-4 columns'
         = f.select :where3, ['--地区--'], {}, class: 'city-select large-4 columns'
     hr
-    = render partial: "contact", locals: { f: f }
+    = render partial: "contact", locals: { f: f, project: @project }
     = f.button :submit, "Next"
