--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,19 +1,19 @@
-- if controller_name != 'sessions'
-  = link_to "Sign in", new_session_path(resource_name)
-  br/
-- if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Sign up", new_registration_path(resource_name)
-  br/
-- if devise_mapping.recoverable? && controller_name != 'passwords'
-  = link_to "Forgot your password?", new_password_path(resource_name)
-  br/
-- if devise_mapping.confirmable? && controller_name != 'confirmations'
-  = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
-  br/
-- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name)
-  br/
-- if devise_mapping.omniauthable?
-  - resource_class.omniauth_providers.each do |provider|
-    = link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
+div.large-12.columns.shared_link
+  - if controller_name != 'sessions'
+    = link_to "登录", new_session_path(resource_name)
+  - if devise_mapping.registerable? && controller_name != 'registrations'
+    = link_to "注册", new_registration_path(resource_name)
     br/
+  - if devise_mapping.recoverable? && controller_name != 'passwords'
+    = link_to "忘记密码?", new_password_path(resource_name)
+    br/
+  - if devise_mapping.confirmable? && controller_name != 'confirmations'
+    = link_to "没有收到确认邮件?", new_confirmation_path(resource_name)
+    br/
+  - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
+    = link_to "没有收到解锁邮件?", new_unlock_path(resource_name)
+    br/
+  - if devise_mapping.omniauthable?
+    - resource_class.omniauth_providers.each do |provider|
+      = link_to "使用这个登录: #{provider.to_s.titleize}", user_omniauth_authorize_path(provider)
+      br/
