add contact require, fix link_to

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -28,7 +28,7 @@ div.container
         = image_tag("project_list_2.png")
     /! 查看所有投资项目
     div.row
-      a href="#"
+      = link_to(projects_path) do
         p.text-center 查看所有投资项目
   div.row
     hr
