--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -8,7 +8,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
       li
         = link_to "发起项目", new_project_path
       li
-        a href="#" 联合投资
+        = link_to "联合投资", investors_path
       li
         = link_to "参与项目", projects_path
       li
