--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -10,7 +10,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
       li
         = link_to "联合投资", investors_path
       li
-        = link_to "参与项目", projects_path
+        = link_to "参与创业", projects_path
       li
         a href="#" 动态
       li
