--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,4 +1,4 @@
-div.row.project
+div.row 
   div.large-4.columns.search_side
     = render "search"
     = render partial: "selection", locals: { projects: @projects }
