--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -1,18 +1,17 @@
-div.row.project
-  = render partial: "header", locals: { stage: :stage0 }
-  h1 基本信息
-  = simple_form_for @project do |f|
-    = f.input :logo
-    = f.input :name
-    = f.input :oneword
-    = f.input :description
-    = f.input :stage do
-      = f.select :stage, ['--请选择--'] + Project::STAGES
-    = f.input :where3 do
-      .city-group
-        = f.select :where1, ['--省份--'] + ChinaCity.list, {}, { class: 'city-select large-4 columns' }
-        = f.select :where2, ['--城市--'], {}, class: 'city-select large-4 columns'
-        = f.select :where3, ['--地区--'], {}, class: 'city-select large-4 columns'
-    hr
-    = render partial: "contact", locals: { f: f, project: @project }
-    = f.button :submit, "Next"
+= render partial: "header", locals: { stage: :stage0 }
+h1 基本信息
+= simple_form_for @project do |f|
+  = f.input :logo
+  = f.input :name
+  = f.input :oneword
+  = f.input :description
+  = f.input :stage do
+    = f.select :stage, ['--请选择--'] + Project::STAGES
+  = f.input :where3 do
+    .city-group
+      = f.select :where1, ['--省份--'] + ChinaCity.list, {}, { class: 'city-select large-4 columns' }
+      = f.select :where2, ['--城市--'], {}, class: 'city-select large-4 columns', default: @project.where2
+      = f.select :where3, ['--地区--'], {}, class: 'city-select large-4 columns'
+  hr
+  = render partial: "contact", locals: { f: f, project: @project }
+  = f.button :submit, "Next"
