--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -8,7 +8,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
       li
         = link_to "浏览项目", projects_path
       li
-        = link_to "联合投资", projects_path
+        = link_to "联合投资", syndicates_path
       li
         = link_to "参与创业", jobs_path
       li
