--- a/app/views/syndicates/index.html.slim
+++ b/app/views/syndicates/index.html.slim
@@ -1,2 +1,7 @@
-h1 Syndicates#index
-p Find me in app/views/syndicates/index.html.slim
+div.row 
+  div.large-4.columns.search_side
+    = render "projects/search"
+    = render partial: "projects/selection", locals: { projects: @projects }
+    
+  div.large-8.columns.projects_search  
+    = render partial: "projects/index", locals: { projects: @projects }
