--- a/app/views/syndicates/index.html.slim
+++ b/app/views/syndicates/index.html.slim
@@ -1,6 +1,6 @@
 div.row 
   div.large-4.columns.search_side
-    = render "projects/search"
+    = render "search"
     = render partial: "projects/selection", locals: { projects: @projects }
     
   div.large-8.columns.projects_search  
