--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -5,6 +5,10 @@
   background-color: #fafafa;
 }
 
+.project_container {
+  padding: 1rem 0;
+}
+
 .project_show {
   padding: 1rem 0 1rem 0;
   border-bottom: 1px solid #dddddd;
@@ -18,8 +22,47 @@ li.active a {
   color: red;
 }
 
-.address {
+.address, .industry {
   color: #aaa;
   font-size: 90%;
   margin-bottom: 0;
+}
+p.address, p.industry {
+  padding: 1rem 0 0;
+}
+
+// 我的项目
+.project_list {
+  background-color: #fafafa;
+  height: 100%;
+}
+
+#search {
+  margin-bottom: 0;
+}
+
+.project_stats {
+  position: relative;
+  top: 0.75rem;
+}
+
+.team {
+  margin: 1rem 1rem;
+}
+
+.title, .description {
+  color: #aaa;
+}
+
+.name {
+  margin-bottom: 0;
+}
+
+.invest_stats {
+  color: #aaa;
+  padding-left: 0.25rem;
+}
+
+.center {
+  margin: auto;
 }
