--- a/app/views/projects/_search.html.slim
+++ b/app/views/projects/_search.html.slim
@@ -1,11 +1,8 @@
 div.row
   div.large-12.columns
-    h4 搜索
-div.row
-  div.large-12.columns
-    ul.inline-list
-      li
-        = text_field_tag(:search_name, '', placeholder: "项目名称")
+    ul.inline-list#search
+      li style="width: 50%"
+        = text_field_tag(:search_name, '', placeholder: "项目名称", width: "100%")
       li
         = button_tag("搜索", class: 'small', id: 'search_button')
 hr
