add funds and jobs page

--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -1,2 +1,16 @@
-h1 Activities#show
-p Find me in app/views/activities/show.html.slim
+- content_for(:container) do
+  div.row
+    div.large-7.columns
+      div.container.activity_main
+        div.activity
+          h3 xx 关注了我
+          h3 xx 项目更新了 xx 内容
+          h3 xx 项目获得了 xx 的投资
+    div.large-4.columns.large-offset-1
+      div.container.activity_side
+        h3 我关注的人
+        hr
+        h3 我关注的项目
+        hr
+        h3 关注我的人
+        hr
