去掉浏览项目页面的融资进度

--- a/app/views/syndicates/_index.html.slim
+++ b/app/views/syndicates/_index.html.slim
@@ -8,3 +8,6 @@
         div.large-7.columns
           p #{project.description}
           p.address #{project_address(project)}
+        div.large-5.columns
+          div.progress
+            span.meter style="width: 50%" 
