--- a/app/views/syndicates/index.html.slim
+++ b/app/views/syndicates/index.html.slim
@@ -4,4 +4,4 @@ div.row
     = render partial: "projects/selection", locals: { projects: @projects }
     
   div.large-8.columns.projects_search  
-    = render partial: "projects/index", locals: { projects: @projects }
+    = render partial: "index", locals: { projects: @projects }
