--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -1,7 +1,14 @@
 = render partial: "header", locals: { stage: :stage0 }
 h1 基本信息
 = simple_form_for @project do |f|
-  = f.input :logo
+  = f.input :logo do
+    div.row#logo_image_field
+      - if @project.logo?
+        div.large-2.columns
+          = image_tag(@project.logo_url, size: "50x50")
+      div.large-10.columns
+        = f.file_field :logo
+  = f.hidden_field :logo_cache
   = f.input :name
   = f.input :oneword
   = f.input :description
@@ -11,7 +18,7 @@ h1 基本信息
     .city-group
       = f.select :where1, ['--省份--'] + ChinaCity.list, {}, { class: 'city-select large-4 columns' }
       = f.select :where2, ['--城市--'], {}, class: 'city-select large-4 columns', default: @project.where2
-      = f.select :where3, ['--地区--'], {}, class: 'city-select large-4 columns'
+      = f.select :where3, ['--地区--'], {}, class: 'city-select large-4 columns', default: @project.where3
   hr
   = render partial: "contact", locals: { f: f, project: @project }
   = f.button :submit, "Next"
