调整project相关的数据关系

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,6 +1,6 @@
 div.row.project
   div.large-12.columns
-    h2 登录
+    h2 新用户注册
     = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f|
       = f.error_notification
       = display_base_errors resource
