--- a/app/views/projects/stage1.html.slim
+++ b/app/views/projects/stage1.html.slim
@@ -1,18 +1,12 @@
 = render partial: "header", locals: { stage: :stage1 }
 h1 团队信息
+hr
 = simple_form_for @project, url: stage1_project_path(@project.id), method: 'post',html:{ class: 'stage1' } do |f|
+  h4 我
   div.owner
-    / TODO 重构之
-    = f.simple_fields_for :members, @owner do |p|
-      = p.input :avatar do
-        div.row#logo_image_field
-          - if @owner.avatar?
-            div.large-2.columns
-              = image_tag(@owner.avatar_url, size: "50x50")
-          div.large-10.columns
-            = p.file_field :avatar
-      = p.hidden_field :avatar_cache 
-      = p.input :name
+    = f.simple_fields_for :owner, @owner do |p|
+      = render partial: "common/input_preview", locals: { model: @owner, column_name: :avatar, f: p }
+    = f.simple_fields_for :member, @member do |p|
       = p.input :title
       = p.input :description
   hr
