--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,18 +1,6 @@
 h2
-  | Edit #{resource_name.to_s.humanize}
-
-div data-magellan-expedition="fixed"
-  dl.sub-nav
-    dd.active data-magellan-arrival="pass"
-      a href="#pass" Account >>
-    dd data-magellan-arrival="social"
-      a href="#social" Social >>
-    dd data-magellan-arrival="intro"
-      a href="#intro" Introduction >>
-    dd data-magellan-arrival="invest"
-      a href="#invest" Investment >>
-    dd data-magellan-arrival="finish"
-      a href="#finish" Finish
+  | 更新用户资料
+hr
 
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical', :multipart => true }) do |f|
   = f.error_notification
@@ -20,79 +8,24 @@ div data-magellan-expedition="fixed"
 
   .row
     .small-12.columns
-      a name="pass"
-      h3 data-magellan-destination="pass" Account
       = f.input :name, :required => true
       = f.input :email, :required => true
       = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false
       = f.input :password_confirmation, :required => false
       = f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true
 
-  hr
   .row
     .small-12.columns
-      a name="social"
-      h3 data-magellan-destination="social" Social
-      = f.input :qq
-      = f.input :douban
-      = f.input :renren
-      = f.input :sinaweibo
-
-  hr
-  .row
-    .small-12.columns
-      a name="intro"
-      h3 data-magellan-destination="intro" Personal
-      = f.input :introduction
-  .row
-    .small-12.columns
-      = f.input :work_experience
-  .row
-    .small-12.columns
-      = f.input :education_experience
-
-  hr
-  .row
-    .small-12.columns
-      a name="invest"
-      h3 data-magellan-destination="invest" Investment
-      = f.input :fund_type
-      = f.input :min_invest
-      = f.input :max_invest
-
-  .row
-    .small-12.columns
-      = f.input :focus_industry do 
-        = check_box_tag "focus_industry[]", '#test1' 
-        = label_tag "Test1"
-        = check_box_tag "focus_industry[]", '#test2' 
-        = label_tag "Test2"
-  .row
-    .small-12.columns
-      = f.input :investment_philosophy do 
-        = check_box_tag "investment_philosophy[]", '#test1' 
-        = label_tag "Test1"
-        = check_box_tag "investment_philosophy[]", '#test2' 
-        = label_tag "Test2"
-  .row
-    .small-12.columns
-      = f.input :added_value do 
-        = check_box_tag "added_value[]", '#test1'
-        = label_tag "Test1"
-        = check_box_tag "added_value[]", '#test2'
-        = label_tag "Test2"
-
-  .row
-    .small-12.columns
-      = image_tag @user.avatar.url
+      = image_tag @user.avatar.url, size: "200x200"
       = f.file_field :avatar
 
   hr
-  a name="finish"
-  h3 data-magellan-destination="finish" Finish
-  = f.button :submit, 'Update', :class => 'btn-primary'
+  = f.button :submit, '更新'
 
-h3 Cancel my account
-p
-  | Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}.
-= link_to "Back", :back
+hr
+
+div.row
+  div.large-12.columns
+    h3 Cancel my account
+    p
+      | Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}.
