融资需求的一些完善工作

--- a/app/views/projects/_header.html.slim
+++ b/app/views/projects/_header.html.slim
@@ -5,4 +5,4 @@ div.centerred
     = content_tag("dd", class: active_for(stage, :stage1)) do
       = link_to "团队信息","#"
     = content_tag("dd", class: active_for(stage, :stage2)) do
-      = link_to "招聘信息","#"
+      = link_to "创业需求","#"
