--- a/app/views/projects/stage2.html.slim
+++ b/app/views/projects/stage2.html.slim
@@ -2,12 +2,16 @@
 h1 创业需求
 = simple_form_for @project, url: stage2_project_url(@project.id), method: 'post' do |f|
   h4 我要融资
+  = check_box_tag :money_require
+  hr
   = f.simple_fields_for :money_requires, @money_require do |p|
+    /TODO 处理金钱单位
     = p.input :money
     = p.input :share
     = p.input :description
-  hr
   h4 我要招人
+  = check_box_tag :person_reuqire
+  hr
   = f.simple_fields_for :person_requires, @person_require do |p|
     = p.input :title
     = p.input :pay
