--- a/app/views/members/_member.html.slim
+++ b/app/views/members/_member.html.slim
@@ -1,9 +1,11 @@
 li
   div.row
     div.large-6.columns
-      = image_tag(member.user.avatar_url, size: "200x200")
+      = link_to user_path(member.user) do
+        - image_tag(member.user.avatar_url, size: "200x200")
     div.large-6.columns
-      h2 #{member.user.name}
+      = link_to user_path(member.user) do
+        h4 #{member.user.name}
       p #{member.role}
       p #{member.title}
       p #{member.description}
