--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -4,7 +4,46 @@
       div.row
         div.large-12.columns.container
           h3 基本资料
+          div.row.basic
+            div.large-3.columns
+              = image_tag(@project.logo.url, size: "200x200")
+            div.large-9.columns
+              h4 #{@project.name}
+              p.description #{@project.oneword}
+          hr
+          div.row.production
+            div.large-12.columns
+              h4 xxx
+              h4 xxx
+          hr
+          div.row.members
+            div.large-12.columns
+              ul.small-block-grid-3
+                = render partial: "members/member", collection: @project.members
+          hr
+          div.row.investors
+            div.large-12.columns
+              ul.small-block-grid-3
+                li
+                  h4 投资人
+                li
+                  h4 投资人
+                li
+                  h4 投资人
     div.large-3.columns.large-offset-1
       div.row
         div.large-12.columns.container
           h3 完整度
+          div.progress
+            span.meter style="width: 50%" 
+          hr
+          button 发布
+      div.row
+        div.large-12.columns.container
+          h3 投资需求
+      div.row
+        div.large-12.columns.container
+          h3 招人需求
+      div.row
+        div.large-12.columns.container
+          h3 关注人员
